--- a/src/Osma.Mobile.App.Android/Osma.Mobile.App.Android.csproj
+++ b/src/Osma.Mobile.App.Android/Osma.Mobile.App.Android.csproj
@@ -61,7 +61,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\account_icon.png" />
   </ItemGroup>
-<ItemGroup>
+  <ItemGroup>
     <AndroidNativeLibrary Include="..\..\libs\android\arm64-v8a\libindy.so">
       <Link>Libraries\arm64-v8a\libindy.so</Link>
     </AndroidNativeLibrary>
@@ -170,7 +170,9 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\keyboard_down_icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\keyboard_down_icon.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidAsset Include="Assets\pool_transactions_local_genesis" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Osma.Mobile.App.Services\Osma.Mobile.App.Services.csproj">
       <Project>{e7fe6690-dc37-46ad-ae52-710028f17034}</Project>
